--- a/src/index.scss
+++ b/src/index.scss
@@ -9,3 +9,13 @@ code {
 	font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
 		monospace;
 }
+
+a {
+	text-decoration: none;
+	color: black;
+	font-weight: bold;
+}
+
+* {
+	box-sizing: border-box;
+}
