finished implementing the authentication components

--- a/src/components/buttons/button.style.scss
+++ b/src/components/buttons/button.style.scss
@@ -4,13 +4,13 @@
 	height: 50px;
 	letter-spacing: 0.5px;
 	line-height: 50px;
-	padding: 0 35px 0 35px;
+	padding: 0 15px 0 15px;
+	margin-right: 20px;
 	font-size: 15px;
 	background-color: black;
 	color: white;
 	text-transform: uppercase;
-	font-family: "Open Sans Condensed";
-	font-weight: bolder;
+	font-weight: 100;
 	border: none;
 	cursor: pointer;
 	display: flex;
